# automata-exchange-data-stream-binance

./: .env  Dockerfile  README.md  requirements.txt  setup.cfg
binance/: BinanceDataStream.py  BinanceExchangeDataStream.py  __main__.py
binance/arguments/: command_line_arguments.py
binance/message/: BinanceDataMessageHandler.py  BinanceDataMessageProcessor.py
binance/message/exchange/rates/: BinanceExchangeDataMessageProcessor.py
binance/message/exchange/rates/handler/: BinanceExchangeDataMessageHandler.py
binance/message/exchange/rates/transform/: BinanceExchangeMessageTransformer.py
binance/message/trade/: BinanceTradeDataMessageProcessor.py
binance/message/trade/handler/: BinanceTradeDataMessageHandler.py
binance/message/trade/transform/: BinanceTradeMessageTransformer.py
binance/message/transform/: BinanceMessageTransformer.py
binance/payload/: BinanceDataPayloadProcessor.py
simulation/runprofile/: __init__.py
simulation/transform/: TransformRuleStoreHandler.py  TransformationStoreHandler.py  __init__.py
tests/binance/message/: BinanceDataMessageProcessor_test.py
tests/binance/message/exchange/: BinanceExchangeDataMessageProcessor_test.py
tests/binance/message/exchange/transform/: BinanceMessageTransformer_test.py
tests/binance/message/transform/: BinanceMessageTransformer_test.py
tests/binance/payload/: BinanceDataPayloadProcessor_test.py
tests/helper/: TestBinanceMessageTransformer.py
