[metadata]
name = persuader-technology-automata-data-stream-binance
version = 0.0.3
description = Automata Binance Data Stream
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
console_scripts =
    executable-name = binance.__main__

[options]
packages = find:
install_requires =
    persuader-technology-automata-core>=0.2.7
    persuader-technology-automata-data.stream==0.0.6
    persuader-technology-automata-exchange-repository>=0.0.4

[options.packages.find]
include = binance*
exclude =
    tests
    simulations
    .scripts
