[metadata]
name = persuader-technology-automata-exchange-data-stream-binance
version = 0.1.6
description = Automata Binance Exchange Data Stream
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    persuader-technology-automata-core>=0.4.3
    persuader-technology-automata-data-stream>=0.1.8
    persuader-technology-automata-exchange-repository>=0.1.1
    persuader-technology-automata-exchange-transform-repository>=0.0.6
    persuader-technology-automata-config>=0.0.9
    persuader-technology-automata-process-manager>=0.1.0

[options.packages.find]
include = binance*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-binance-exchange-data-stream-start = binance.__main__:start
