[metadata]
name = persuader-technology-automata-exchange-data-stream-binance
version = 0.2.8
description = Automata Binance Exchange Data Stream
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    persuader-technology-automata-core>=0.5.1
    persuader-technology-automata-utilities>=0.1.1
    persuader-technology-automata-redis>=0.3.3
    persuader-technology-automata-process-manager>=0.1.7
    persuader-technology-automata-data-stream>=0.2.2
    persuader-technology-automata-exchange-repository>=0.2.6
    persuader-technology-automata-exchange-transform-repository>=0.1.7
    persuader-technology-automata-config>=0.1.2

[options.packages.find]
include = binance*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-binance-exchange-data-stream-start = binance.__main__:start
